--- a/index.html
+++ b/index.html
@@ -5,11 +5,159 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font awsome -->
+    <script src="https://kit.fontawesome.com/4c3379cb1a.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
+    <!-- header-strat -->
+    <header>
 
+    </header>
+    <!-- header-end -->
+    <main>
+        <!-- top players and top blogs -->
+        <section class="container">
+            <div class="top-players">
+                <h2 class="section-title">Top Players</h2>
+                <div class="players">
+                    <div class="player"><img src="images/players/player-1.png" alt="">
+                        <h3 class="playlers-name">Top Player-1</h3>
+                    </div>
+                    <div class="player"><img src="images/players/player-2.png" alt="">
+                        <h3 class="playlers-name">Top Player-2</h3>
+                    </div>
+                    <div class="player"><img src="images/players/player-3.png" alt="">
+                        <h3 class="playlers-name">Top Player-3</h3>
+                    </div>
+                    <div class="player"><img src="images/players/player-4.png" alt="">
+                        <h3 class="playlers-name">Top Player-4</h3>
+                    </div>
+                    <div class="player"><img src="images/players/player-5.png" alt="">
+                        <h3 class="playlers-name">Top Player-5</h3>
+                    </div>
+                    <div class="player"><img src="images/players/player-6.png" alt="">
+                        <h3 class="playlers-name">Top Player-6</h3>
+                    </div>
+
+                </div>
+            </div>
+            <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of my Favourite UX/UL Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapid</a> </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of my Favourite UX/UL Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapid</a> </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of my Favourite UX/UL Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapid</a> </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of my Favourite UX/UL Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapid</a> </p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- latest courses  -->
+        <section class="container">
+            <h2 class="section-title">Latest-Courses</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="courses-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">React- The complete Guide 2020</h3>
+                        <p class="course-author">Read Krakkof</p>
+                        <div class="course-info">
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <span> 4.5</span>
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock">1:30hrs</i>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="courses-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">React- The complete Guide 2020</h3>
+                        <p class="course-author">Read Krakkof</p>
+                        <div class="course-info">
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <span> 4.5</span>
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock">1:30hrs</i>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="courses-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">React- The complete Guide 2020</h3>
+                        <p class="course-author">Read Krakkof</p>
+                        <div class="course-info">
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <span> 4.5</span>
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock">1:30hrs</i>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
